[workspace]

[package]
name = "slimnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basenn = { path = "./basenn" }
derives = { path = "./derives" }
dfdx = { version = "0.13.0" }
num-traits = "0.2.15"
rand_distr = "0.4.3"
